# kotlin-android-resources-example

./: .bazelproject  .gitignore  WORKSPACE
example/src/main/java/examples/android/lib/: AndroidManifest.xml  BUILD.bazel  MainFragment.kt
example/src/main/java/examples/android/lib/res-second/values/: strings.xml
example/src/main/java/examples/android/lib/res/layout/: sample_layout.xml
example/src/main/java/examples/android/lib/res/values/: strings.xml
