load("@io_bazel_rules_kotlin//kotlin:android.bzl", "kt_android_library")

kt_android_library(
    name = "example_fragment",
    srcs = [
        "MainFragment.kt",
    ],
    manifest = "AndroidManifest.xml",
    resource_files = glob(["res/**"]),
    visibility = ["//visibility:public"],
    deps = [
        ":resources_second",
        "@maven//:androidx_appcompat_appcompat",
    ],
)

android_library(
    name = "resources_second",
    manifest = "AndroidManifest.xml",
    resource_files = glob(["res-second/**"]),
    visibility = ["//visibility:public"],
)
